hphp/hack/test/typecheck/asyncgen5.php.exp
File "asyncgen5.php", line 13, characters 5-15:
  int
File "asyncgen5.php", line 14, characters 5-15:
  string
File "asyncgen5.php", line 13, characters 5-15:[2]
  int
File "asyncgen5.php", line 14, characters 5-15:[2]
  string
File "asyncgen5.php", line 8, characters 3-7:
Invalid yield (Typing[4110])
File "asyncgen5.php", line 7, characters 15-28:
This is an object of type AsyncGenerator
File "asyncgen5.php", line 8, characters 3-7:
It is incompatible with an object of type Generator (result of function with 'yield' in the body)
